# crust_json_encoder

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  LICENSE  Rakefile  crust_json_encoder.gemspec  rails_json_gem_encoder.gemspec
.github/workflows/: ci.yml  gems.yml
ext/crust_json_encoder/: Cargo.toml  extconf.rb
ext/crust_json_encoder/src/: lib.rs
lib/: crust_json_encoder.rb  rails_json_gem_encoder.rb
performance/: benchmark.rb
src/: lib.rs
test/: crust_json_encoder_test.rb  rails_json_gem_encoder_test.rb  test_helper.rb
