[package]
name = "rails_json_gem_encoder"
version = "0.0.1"
authors = ["y-yagi <yuuji.yaginuma@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
helix = { git = "https://github.com/tildeio/helix.git", rev = "dee30aa4fde64cba8e8e2cc7799e6f536578e38a" }
phf = { version = "0.8", features = ["macros"] }
