[package]
name = "crust_json_encoder"
version = "0.0.1"
authors = ["y-yagi <yuuji.yaginuma@gmail.com>"]
edition = "2018"

[package.metadata.thermite]
github_releases = true

[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
rutie = "0.7.0"
phf = { version = "0.8", features = ["macros"] }
