[package]
name = "crust_json_encoder"
version = "0.0.5"
authors = ["Yuji Yaginuma <yuuji.yaginuma@gmail.com>"]
edition = "2018"
homepage = "https://github.com/y-yagi/crust_json_encoder"
repository = "https://github.com/y-yagi/crust_json_encoder"
license = "MIT"
readme = "README.md"

[package.metadata.thermite]
github_releases = true

[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
rutie = "0.7.0"
phf = { version = "0.8", features = ["macros"] }
